Notify Issue List dialog about resize after loading the list in order to set correct overflow (issue-244)

--- a/src/main/resources/assets/styles/publish/issue-list-dialog.less
+++ b/src/main/resources/assets/styles/publish/issue-list-dialog.less
@@ -1,9 +1,5 @@
 .issue-list-dialog {
 
-  .modal-dialog-body {
-    overflow: auto;
-  }
-
   .docked-panel {
     width: auto;
     box-shadow: none;
@@ -105,7 +101,7 @@
             top: 3px;
 
             &:last-child {
-              margin-right: 18px;
+              margin-left: 18px;
             }
           }
         }
